--- a/example.html
+++ b/example.html
@@ -4,48 +4,48 @@
   </head>
 
   <body>
+    view0 (default appearance)
+    <div id="view0-container"></div>
 
-  view0 (default appearance)
-  <div id='view0-container'></div>
+    <br /><br />view1 (custom style/size)
+    <div id="view1-container"></div>
 
-  <br><br>view1 (custom style/size)
-  <div id='view1-container'></div>
+    <br /><br />view2 (custom radius scale)
+    <div id="view2-container"></div>
 
-  <br><br>view2 (should be removed after 5 seconds)
-  <div id='view2-container'></div>
-
+    <br /><br />view3 (should be removed after 5 seconds)
+    <div id="view3-container"></div>
   </body>
 
   <script>
-
     // You'll want to use the response from the KDB to gather xyz files
     // as strings. For this example I'll just use an xyz file I have handy:
     const caffeine = `24
-Caffeine
-H      -3.3804130    -1.1272367     0.5733036
-N       0.9668296    -1.0737425    -0.8198227
-C       0.0567293     0.8527195     0.3923156
-N      -1.3751742    -1.0212243    -0.0570552
-C      -1.2615018     0.2590713     0.5234135
-C      -0.3068337    -1.6836331    -0.7169344
-C       1.1394235     0.1874122    -0.2700900
-N       0.5602627     2.0839095     0.8251589
-O      -0.4926797    -2.8180554    -1.2094732
-C      -2.6328073    -1.7303959    -0.0060953
-O      -2.2301338     0.7988624     1.0899730
-H       2.5496990     2.9734977     0.6229590
-C       2.0527432    -1.7360887    -1.4931279
-H      -2.4807715    -2.7269528     0.4882631
-H      -3.0089039    -1.9025254    -1.0498023
-H       2.9176101    -1.8481516    -0.7857866
-H       2.3787863    -1.1211917    -2.3743655
-H       1.7189877    -2.7489920    -1.8439205
-C      -0.1518450     3.0970046     1.5348347
-C       1.8934096     2.1181245     0.4193193
-N       2.2861252     0.9968439    -0.2440298
-H      -0.1687028     4.0436553     0.9301094
-H       0.3535322     3.2979060     2.5177747
-H      -1.2074498     2.7537592     1.7203047`;
+        Caffeine
+        H      -3.3804130    -1.1272367     0.5733036
+        N       0.9668296    -1.0737425    -0.8198227
+        C       0.0567293     0.8527195     0.3923156
+        N      -1.3751742    -1.0212243    -0.0570552
+        C      -1.2615018     0.2590713     0.5234135
+        C      -0.3068337    -1.6836331    -0.7169344
+        C       1.1394235     0.1874122    -0.2700900
+        N       0.5602627     2.0839095     0.8251589
+        O      -0.4926797    -2.8180554    -1.2094732
+        C      -2.6328073    -1.7303959    -0.0060953
+        O      -2.2301338     0.7988624     1.0899730
+        H       2.5496990     2.9734977     0.6229590
+        C       2.0527432    -1.7360887    -1.4931279
+        H      -2.4807715    -2.7269528     0.4882631
+        H      -3.0089039    -1.9025254    -1.0498023
+        H       2.9176101    -1.8481516    -0.7857866
+        H       2.3787863    -1.1211917    -2.3743655
+        H       1.7189877    -2.7489920    -1.8439205
+        C      -0.1518450     3.0970046     1.5348347
+        C       1.8934096     2.1181245     0.4193193
+        N       2.2861252     0.9968439    -0.2440298
+        H      -0.1687028     4.0436553     0.9301094
+        H       0.3535322     3.2979060     2.5177747
+        H      -1.2074498     2.7537592     1.7203047`;
 
     // Create a ViewManager instance.
     const manager = ViewManager();
@@ -54,27 +54,30 @@ H      -1.2074498     2.7537592     1.7203047`;
     const view0 = manager.addView(caffeine);
 
     // Append the resulting canvas to the document body.
-    document.getElementById('view0-container').appendChild(view0);
+    document.getElementById("view0-container").appendChild(view0);
 
     // Add another view of the caffeine molecule.
     const view1 = manager.addView(caffeine);
     // Add a border.
-    view1.style.border = '4px dotted black'
+    view1.style.border = "4px dotted black";
     // Change the background.
-    view1.style.background = 'lightblue';
+    view1.style.background = "lightblue";
     // Change the size.
-    view1.style.width = '384px';
+    view1.style.width = "384px";
     // Append it to the document.
-    document.getElementById('view1-container').appendChild(view1);
+    document.getElementById("view1-container").appendChild(view1);
+
+    // Add another view with a custom radius scale.
+    const view2 = manager.addView(caffeine, 2);
+    document.getElementById("view2-container").appendChild(view2);
 
     // Another one.
-    const view2 = manager.addView(caffeine);
-    document.getElementById('view2-container').appendChild(view2);
+    const view3 = manager.addView(caffeine);
+    document.getElementById("view3-container").appendChild(view3);
 
     // Remove view2 after 5 seconds.
     setTimeout(function() {
-      manager.removeView(view2);
+      manager.removeView(view3);
     }, 5000);
-
   </script>
 </html>
